# realtime-clickstream-lakehouse

./: .gitignore  README.md  main.py  pyproject.toml  terraform.tfstate
.github/workflows/: deploy.yaml  destroy.yaml
docs/: architecture.md
etl/: glue_stream.py
etl/handlers/: click_handler.py
infra/terraform/: inject_api_url.py  main.tf  outputs.tf  plan-dev.tfplan  plan-staging.tfplan  variables.tf  versions.tf
infra/terraform-oidc-setup/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
infra/terraform/modules/bucket/: main.tf  outputs.tf
infra/terraform/modules/glue/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/glue_network/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/glue_network/scripts/: cleanup_vpc_endpoints.py  cleanup_vpc_enis.py  detach_igw.py
infra/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ingest_api/: Dockerfile  main.tf  outputs.tf  variables.tf
infra/terraform/modules/lambda_layer/: layers.tf  outputs.tf  variables.tf
infra/terraform/modules/stream/: main.tf  outputs.tf
infra/terraform/scripts/: build_layer.py  create_directory.py
infra/terraform/tfvars/: dev.tfvars  prod.tfvars  staging.tfvars
tests/: conftest.py
tests/integration/: test_data_pipeline.py  test_infrastructure.py
tests/unit/: test_click_handler.py  test_glue_stream.py
website/: index.html  index.template.html
