[project]
name = "realtime-clickstream-lakehouse"
version = "0.1.0"
description = "Realtime clickstream data collection and analysis"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where   = ["."]
include = ["etl*", "etl.*"]
exclude = ["infra*", "website*", "tests*", "docs*"]

dependencies = [
    "aws-cdk-lib>=2.194.0",
    "boto3>=1.38.8",
    "constructs>=10.4.2",
    "pyspark>=3.5.5",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
